--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /nbproject/private/
 nbproject/
 wp-config.php
+/wp-content/uploads/2014/
+/wp-content/uploads/2015/
+/wp-content/uploads/2016/
+/wp-content/uploads/2017/
+/wp-content/uploads/2018/
+/wp-content/uploads/2019/
+/wp-content/uploads/2020/
