--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
+.DS_Store
 /nbproject/private/
 nbproject/
 wp-config.php
-/wp-content/uploads/2014/
-/wp-content/uploads/2015/
-/wp-content/uploads/2016/
-/wp-content/uploads/2017/
-/wp-content/uploads/2018/
-/wp-content/uploads/2019/
-/wp-content/uploads/2020/
-.htaccess
-.ftpquota
-.DS_Store
-error_log
+wp-content/
+dploy.yaml
